--- a/Views/SettingsViewController/SettingsViewController.storyboard
+++ b/Views/SettingsViewController/SettingsViewController.storyboard
@@ -26,7 +26,7 @@
                                 <rect key="frame" x="0.0" y="-44" width="375" height="745"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Daf-Cd-Wh3" customClass="FloatingActionButton" customModule="RealmTimers" customModuleProvider="target">
-                                <rect key="frame" x="127.5" y="529" width="120" height="120"/>
+                                <rect key="frame" x="157.5" y="589" width="60" height="60"/>
                                 <color key="backgroundColor" name="TintColor"/>
                                 <color key="tintColor" name="PrimaryColor"/>
                                 <state key="normal" image="fab"/>
@@ -40,22 +40,22 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IpV-rm-AQ0" customClass="UIViewX" customModule="RealmTimers" customModuleProvider="target">
-                                <rect key="frame" x="16" y="106" width="343" height="178"/>
+                                <rect key="frame" x="16" y="107.5" width="343" height="176.5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OoW-8U-mnk">
-                                        <rect key="frame" x="16" y="16" width="311" height="23.5"/>
+                                        <rect key="frame" x="16" y="16" width="311" height="25"/>
                                         <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="20"/>
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable sound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yoj-O1-kXk">
-                                        <rect key="frame" x="16" y="55.5" width="311" height="31"/>
+                                        <rect key="frame" x="16" y="57" width="311" height="31"/>
                                         <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="15"/>
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="taG-Li-eGA">
-                                        <rect key="frame" x="278" y="55.5" width="51" height="31"/>
+                                        <rect key="frame" x="278" y="57" width="51" height="31"/>
                                         <color key="backgroundColor" red="0.23137254900000001" green="0.30196078430000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
                                             <action selector="soundEnabled:" destination="yNf-5s-XvX" eventType="valueChanged" id="g09-Qc-xte"/>
@@ -93,28 +93,28 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mem-1S-8R8" customClass="UIViewX" customModule="RealmTimers" customModuleProvider="target">
-                                <rect key="frame" x="16" y="307" width="343" height="143"/>
+                                <rect key="frame" x="16" y="307" width="343" height="203"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="General" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hth-Ah-VXf">
-                                        <rect key="frame" x="16" y="16" width="311" height="23.5"/>
+                                        <rect key="frame" x="16" y="16" width="311" height="25"/>
                                         <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="20"/>
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Support" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CZK-Ff-4jP">
-                                        <rect key="frame" x="16" y="55.5" width="54.5" height="17.5"/>
+                                        <rect key="frame" x="16" y="57" width="63" height="19"/>
                                         <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="15"/>
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="User agreement" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vxK-ml-iWU">
-                                        <rect key="frame" x="16" y="116.5" width="311" height="17.5"/>
+                                        <rect key="frame" x="16" y="121" width="311" height="19"/>
                                         <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="15"/>
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Doughnut donation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T54-vy-ZxG">
-                                        <rect key="frame" x="16" y="86" width="311" height="17.5"/>
+                                        <rect key="frame" x="16" y="89" width="311" height="19"/>
                                         <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="15"/>
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
@@ -137,7 +137,7 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Settings" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KS0-LU-r5Z">
-                                <rect key="frame" x="147" y="40" width="81" height="26"/>
+                                <rect key="frame" x="143" y="40" width="89.5" height="27.5"/>
                                 <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="22"/>
                                 <color key="textColor" name="PrimaryColor"/>
                                 <nil key="highlightedColor"/>
@@ -167,6 +167,7 @@
                     <connections>
                         <outlet property="closeButton" destination="Daf-Cd-Wh3" id="Rui-ut-Pup"/>
                         <outlet property="generalView" destination="mem-1S-8R8" id="kRI-WF-mbp"/>
+                        <outlet property="soundSwitch" destination="taG-Li-eGA" id="Uat-ME-XK5"/>
                         <outlet property="soundView" destination="IpV-rm-AQ0" id="crC-7B-1db"/>
                     </connections>
                 </viewController>
