--- a/Views/SettingsViewController/SettingsViewController.storyboard
+++ b/Views/SettingsViewController/SettingsViewController.storyboard
@@ -48,27 +48,17 @@
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enable sound" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yoj-O1-kXk">
-                                        <rect key="frame" x="16" y="55.5" width="311" height="31"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sound selection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jF8-7Q-f8c">
+                                        <rect key="frame" x="16" y="87.5" width="169" height="17.5"/>
                                         <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="15"/>
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="taG-Li-eGA">
-                                        <rect key="frame" x="278" y="55.5" width="51" height="31"/>
-                                        <color key="backgroundColor" red="0.23137254900000001" green="0.30196078430000001" blue="0.40784313729999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <connections>
-                                            <action selector="soundEnabled:" destination="yNf-5s-XvX" eventType="valueChanged" id="g09-Qc-xte"/>
-                                        </connections>
-                                    </switch>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Sound selection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jF8-7Q-f8c">
-                                        <rect key="frame" x="16" y="89" width="169" height="19"/>
-                                        <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="15"/>
-                                        <color key="textColor" name="PrimaryColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Heavy Rain" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWf-9z-icT">
-                                        <rect key="frame" x="193" y="89" width="134" height="19"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Heavy Rain" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gWf-9z-icT">
+                                        <rect key="frame" x="193" y="87.5" width="134" height="17.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="134" id="F8i-no-OZg"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="LibreBaskerville-Regular" family="Libre Baskerville" pointSize="15"/>
                                         <color key="textColor" name="PrimaryColor"/>
                                         <nil key="highlightedColor"/>
@@ -77,18 +67,12 @@
                                 <color key="backgroundColor" red="0.23137254900000001" green="0.30196078430000001" blue="0.40784313729999999" alpha="0.83126100349999998" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstItem="gWf-9z-icT" firstAttribute="centerY" secondItem="jF8-7Q-f8c" secondAttribute="centerY" id="1OJ-hZ-Y9B"/>
-                                    <constraint firstItem="taG-Li-eGA" firstAttribute="centerY" secondItem="Yoj-O1-kXk" secondAttribute="centerY" id="4p6-wL-Ren"/>
-                                    <constraint firstItem="Yoj-O1-kXk" firstAttribute="centerX" secondItem="IpV-rm-AQ0" secondAttribute="centerX" id="6td-Q4-03L"/>
-                                    <constraint firstAttribute="trailing" secondItem="taG-Li-eGA" secondAttribute="trailing" constant="16" id="Ens-mO-Qxr"/>
-                                    <constraint firstItem="jF8-7Q-f8c" firstAttribute="top" secondItem="Yoj-O1-kXk" secondAttribute="bottom" constant="13" id="KgG-xH-wvt"/>
-                                    <constraint firstItem="Yoj-O1-kXk" firstAttribute="leading" secondItem="IpV-rm-AQ0" secondAttribute="leading" constant="16" id="VYF-mO-o72"/>
-                                    <constraint firstItem="Yoj-O1-kXk" firstAttribute="leading" secondItem="IpV-rm-AQ0" secondAttribute="leading" constant="16" id="c4u-fE-eO8"/>
+                                    <constraint firstItem="gWf-9z-icT" firstAttribute="leading" secondItem="jF8-7Q-f8c" secondAttribute="trailing" constant="8" id="P18-gw-rhg"/>
                                     <constraint firstItem="OoW-8U-mnk" firstAttribute="leading" secondItem="IpV-rm-AQ0" secondAttribute="leading" constant="16" id="e8D-DS-VlS"/>
-                                    <constraint firstItem="taG-Li-eGA" firstAttribute="top" secondItem="OoW-8U-mnk" secondAttribute="bottom" constant="16" id="eCz-Ag-74c"/>
                                     <constraint firstItem="OoW-8U-mnk" firstAttribute="top" secondItem="IpV-rm-AQ0" secondAttribute="top" constant="16" id="fgW-g1-FeM"/>
                                     <constraint firstItem="OoW-8U-mnk" firstAttribute="centerX" secondItem="IpV-rm-AQ0" secondAttribute="centerX" id="fwQ-md-6av"/>
                                     <constraint firstItem="jF8-7Q-f8c" firstAttribute="leading" secondItem="IpV-rm-AQ0" secondAttribute="leading" constant="16" id="iRX-id-pGP"/>
-                                    <constraint firstItem="Yoj-O1-kXk" firstAttribute="top" secondItem="OoW-8U-mnk" secondAttribute="bottom" constant="16" id="nKu-6C-1qZ"/>
+                                    <constraint firstItem="jF8-7Q-f8c" firstAttribute="top" secondItem="OoW-8U-mnk" secondAttribute="bottom" constant="48" id="rZG-jq-9hs"/>
                                     <constraint firstAttribute="trailing" secondItem="gWf-9z-icT" secondAttribute="trailing" constant="16" id="seO-yQ-Wb8"/>
                                 </constraints>
                             </view>
@@ -167,7 +151,6 @@
                     <connections>
                         <outlet property="closeButton" destination="Daf-Cd-Wh3" id="Rui-ut-Pup"/>
                         <outlet property="generalView" destination="mem-1S-8R8" id="kRI-WF-mbp"/>
-                        <outlet property="soundSwitch" destination="taG-Li-eGA" id="Uat-ME-XK5"/>
                         <outlet property="soundView" destination="IpV-rm-AQ0" id="crC-7B-1db"/>
                     </connections>
                 </viewController>
