--- a/Views/AddTimerViewController/AddTimerViewController.storyboard
+++ b/Views/AddTimerViewController/AddTimerViewController.storyboard
@@ -98,7 +98,7 @@
                                                     <constraint firstAttribute="height" constant="50" id="6PG-Nr-sgt"/>
                                                     <constraint firstAttribute="width" constant="50" id="yyw-ec-Ko4"/>
                                                 </constraints>
-                                                <color key="tintColor" red="1" green="1" blue="1" alpha="0.69999999999999996" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <color key="tintColor" name="PrimaryColor"/>
                                                 <state key="normal" image="pie2"/>
                                                 <connections>
                                                     <action selector="preFireDurationSelected:" destination="DPZ-sQ-GOm" eventType="touchUpInside" id="ChL-8A-u1d"/>
@@ -289,6 +289,9 @@
         <image name="pie4" width="75" height="75"/>
         <namedColor name="BackgroundColor">
             <color red="0.95294117647058818" green="0.95294117647058818" blue="0.98039215686274506" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="PrimaryColor">
+            <color red="0.75686274509803919" green="0.76078431372549016" blue="0.76470588235294112" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
