Storyboards separated out from ClockViewController

--- a/Views/ClockViewController/CirclePreFireViewController~.storyboard
+++ b/Views/ClockViewController/CirclePreFireViewController~.storyboard
@@ -128,6 +128,36 @@
             </objects>
             <point key="canvasLocation" x="5460.8695652173919" y="115.84821428571428"/>
         </scene>
+        <!--CirclePreFireViewController-->
+        <scene sceneID="1SW-hn-5Bv">
+            <objects>
+                <viewController storyboardIdentifier="CirclePreFireViewController" title="CirclePreFireViewController" id="uPo-fD-hSd" customClass="CirclePreFireViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="iLg-f4-HVT">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="yJT-wx-lYR"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kQk-MZ-nYE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6535" y="-301"/>
+        </scene>
+        <!--BarsPreFireViewController-->
+        <scene sceneID="ZAJ-4X-ANE">
+            <objects>
+                <viewController storyboardIdentifier="BarsPreFireViewController2" title="BarsPreFireViewController" id="nXo-Zh-ScR" customClass="BarsPreFireViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="zuU-ag-yIa">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="bcT-re-EOM"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SCT-W5-PWa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="7294" y="116"/>
+        </scene>
         <!--boom-->
         <scene sceneID="wYg-A0-C8j">
             <objects>
@@ -136,27 +166,27 @@
             </objects>
             <point key="canvasLocation" x="5888" y="38"/>
         </scene>
-        <!--CirclePreFireViewController-->
-        <scene sceneID="abd-af-h2l">
-            <objects>
-                <viewControllerPlaceholder storyboardIdentifier="CirclePreFireViewController" storyboardName="CirclePreFireViewController" referencedIdentifier="CirclePreFireViewController" id="vCT-dd-ORF" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mdE-IZ-j87" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="6535" y="-301"/>
-        </scene>
-        <!--BarsPreFireViewController-->
-        <scene sceneID="JrQ-GH-dvm">
-            <objects>
-                <viewControllerPlaceholder storyboardIdentifier="BarsPreFireViewController" storyboardName="BarsPreFireViewController" referencedIdentifier="BarsPreFireViewController" id="QCp-Rt-c8N" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="9Og-Vk-5rs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="7294" y="116"/>
-        </scene>
         <!--MathPreFireViewController-->
-        <scene sceneID="l7i-c4-0DZ">
+        <scene sceneID="UzZ-Ct-SmE">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="MathPreFireViewController" storyboardName="MathPreFireViewController" referencedIdentifier="MathPreFireViewController" id="zH1-LV-ito" sceneMemberID="viewController"/>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DaE-wU-bHw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <viewController storyboardIdentifier="MathPreFireViewController" title="MathPreFireViewController" id="JAV-6c-qYZ" customClass="MathPreFireViewController" customModule="RealmTimers" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tma-Ct-FZK">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ili-1G-iPT">
+                                <rect key="frame" x="16" y="20" width="60" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="UAT-WH-QLg"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Efa-Q5-PZ8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="6541" y="413"/>
         </scene>
